Home and product page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Woody</title>
+    <link rel=" shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
     <script src="assets/js/jquery-3.5.1.slim.min.js" ></script>
     <script src="assets/js/bootstrap.bundle.min.js" ></script>
-
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fontawesome/css/all.css">
     <link rel="stylesheet" href="assets/css/ui/ui.css">
@@ -30,7 +30,9 @@
     <!-- ========== Nav Bar Start ========== -->
     <div class="cg-header">
         <div class="container">
-            <h2 class="logo"><span>Woo</span>dy</h2>
+            <div class="logo">
+                <img src="assets/img/logo.png" alt="">
+            </div>
         <input type="checkbox" id="chk">
         <label class="show-menu-btn" for="chk">
             <i class="fas fa-bars"></i>
