Added all files

--- a/table-lamps.html
+++ b/table-lamps.html
@@ -13,11 +13,9 @@
 	<link rel="stylesheet" href="assets/css/fontawesome/css/all.css">
 	<link rel="stylesheet" href="assets/css/ui/ui.css">
 	<link rel="stylesheet" href="assets/css/ui/responsive.css">
-	<link rel="stylesheet" href="assets/css/home.css">
+	<link rel="stylesheet" href="assets/css/table-lamps.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<script src='assets/js/jquery.zoom.min.js'></script>
 	<script src="assets/js/jquery.preloadinator.min.js" type="text/javascript"></script>
-	<!-- script src="assets/js/jquery.preloadinator.js"></script> -->
 	<script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-36251023-1']);
@@ -60,20 +58,11 @@
 		</div>
 	</div>
 	<!-- ========== Nav Bar End   ========== -->
-	<!-- ========== Hero Part Start ========== -->
-	<div class="cg-hero ">
-		<div class="container">
-			<div class="cg-hero-header">
-				<h1>Stylish & Scalable</h1>
-				<p>Prosper shapeshifts to meet the needs of your store.</p> <a class="hero-btn hero-btn1" href="#">SHOP NOW</a> </div>
-		</div>
-	</div>
-	<!-- ========== Hero Part End   ========== -->
 	<!-- ========== Feature Product Start   ========== -->
 	<div class="cg-feature-products">
 		<div class="container">
 			<div class="cg-feature-products-header">
-				<h2>Feature Products</h2> </div>
+				<h2>Table lamps</h2> </div>
 			<div class="divider"></div>
 			<div class="container cg-feature-products-body">
 				<div class="row">
@@ -170,36 +159,6 @@
 		</div>
 	</div>
 	<!-- ==========   Feature Product End   ========== -->
-	<!-- ==========  RECENT BLOG POSTS Start  ========== -->
-	<div class="cg-recent-blog">
-		<div class="cg-recent-blog-header">
-			<h2>RECENT BLOG POSTS</h2> </div>
-		<div class="divider"></div>
-		<div class="cg-recent-blog-main">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 blog-main">
-						<a href="#"><img src="assets/img/blog/blog-1.jpg" alt=""></a>
-						<p class="blog-name"><a href="#">THE BEST THING YOU'VE EVER WRITTEN</a></p>
-						<p class="blog-time">2016 Jan 3rd</p>
-					</div>
-					<div class="col-md-4 blog-main">
-						<a href="#"><img src="assets/img/blog/blog-2.jpg" alt=""></a>
-						<p class="blog-name"><a href="#">THE BEST THING YOU'VE EVER WRITTEN</a></p>
-						<p class="blog-time">2016 Jan 3rd</p>
-					</div>
-					<div class="col-md-4 blog-main">
-						<a href="#"><img src="assets/img/blog/blog-3.jpg" alt=""></a>
-						<p class="blog-name"><a href="#">THE BEST THING YOU'VE EVER WRITTEN</a></p>
-						<p class="blog-time">2016 Jan 3rd</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- ==========   RECENT BLOG POSTS End   ========== -->
-	<br>
-	<br>
 	<!-- ========================= FOOTER START ========================= -->
 	<footer class="section-footer">
 		<div class="container">
@@ -252,10 +211,11 @@
 						<a href="#" class="d-block mb-2 text-left"><img src="assets/img/misc/playmarket.png" height="40"></a>
 					</div>
 				</div>
+			</div>
 			<hr>
 			<section class="container footer-copyright">
 				<p id="reserve" class="float-left text-muted">All Right Reserved</p>
-				<p target="_blank" class="float-right text-muted"> Made with by Team Codember <i class="fas fa-heart"></i> by Team Codember </p>
+				<p target="_blank" class="float-right text-muted"> Made with by Team Codergem <i class="fas fa-heart"></i> by Team Codergem </p>
 			</section>
 		</div>
 	</footer>
@@ -276,7 +236,7 @@
 </body>
 <script>
 $('.js-preloader').preloadinator({
-	minTime: 1500
+	minTime: 2000
 });
 </script>
 
